--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,22 +1,38 @@
 @define-color foreground #654735;
 @define-color foreground-inactive #a89984;
 @define-color background #f2e5bc;
+@define-color blue #45707a;
+@define-color bg_visual_green #d7d9ae;
+@define-color bg_visual_red #efd2b3;
+@define-color bg_visual_blue #d3d5b8;
+@define-color bg_visual_yellow #f3deaa;
 
 * {
-    font-family: JetBrainsMono Nerd Font;
-    font-size: 17px;
-    padding: 0;
-    margin: 0;
+	border: none;
+	border-radius: 0;
+	min-height: 0;
+	margin: 0;
+	padding: 0;
+	box-shadow: none;
+	text-shadow: none;
 }
 
 #waybar {
+	font-family: JetBrainsMono Nerd Font;
+	font-size: 12pt;
     color: @foreground;
     background-color: @background;
+	font-weight: bolder;
 }
 
 #workspaces button {
     color: @foreground;
     padding-left: 0.7em;
+    padding-right: 0.7em;
+}
+
+#workspaces button:hover {
+	background: transparent;
 }
 
 #workspaces button.empty {
@@ -27,8 +43,11 @@
 #memory,
 #disk,
 #temperature {
-    padding-left: 1em
+    padding-left: 1em;
+	padding-right: 1em;
+
 }
+
 
 #network,
 #pulseaudio,
@@ -36,8 +55,37 @@
 #backlight,
 #language,
 #network,
-#bluetooth,
-#clock
+#clock,
 #tray {
-    padding-right: 1em 
+    padding-right: 1em;
+	padding-left: 1em;
+}
+
+#pulseaudio {
+	background: @bg_visual_blue;
+}
+
+#backlight{
+	background: @bg_visual_green;
+}
+
+
+#language {
+	background: @bg_visual_red;
+}
+
+#battery {
+	background: @bg_visual_green;
+}
+
+#clock {
+	background: @bg_visual_yellow;
+}
+
+#network {
+ background: @bg_visual_blue;
+}
+
+#tray {
+	background: @blue;
 }
